--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <ul class="nav-list">
                     <li class="nav-list__item">
-                        <a class="nav-list__link" href="./index.html">Studio</a>
+                        <a class="nav-list__link active" href="./index.html">Studio</a>
                     </li>
                     <li class="nav-list__item">
                         <a class="nav-list__link" href="">Portfolio</a>
