--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 <h2 class="features__title visually-hidden">Features</h2>
                 <ul class="features__list">
                     <li class="features-item">
+                        <div class="features-item__icon">
+                            <svg class="icon-technologies" width="64" height="64">
+                                <use href="./images/icons.svg#icon-strategy"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item__title">Strategy</h3>
                         <p class="features-item__text">
                             Our goal is to identify the business problem to walk away with
@@ -69,6 +74,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item__icon">
+                            <svg class="icon-technologies" width="64" height="64">
+                                <use href="./images/icons.svg#icon-punctuality"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item__title">Punctuality</h3>
                         <p class="features-item__text">
                             Bring the key message to the brand's audience for the best price
@@ -76,6 +86,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item__icon">
+                            <svg class="icon-technologies" width="64" height="64">
+                                <use href="./images/icons.svg#icon-diligence"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item__title">Diligence</h3>
                         <p class="features-item__text">
                             Research and confirm brands that present the strongest digital
@@ -83,6 +98,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-item__icon">
+                            <svg class="icon-technologies" width="64" height="64">
+                                <use href="./images/icons.svg#icon-technologies"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-item__title">Technologies</h3>
                         <p class="features-item__text">
                             Design practice focused on digital experiences. We bring forth a
