--- a/index.html
+++ b/index.html
@@ -123,6 +123,36 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Mark Guerrero</h3>
                             <p class="team-member__profession">Product Designer</p>
+                            <ul class="social-networks-list">
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -130,6 +160,36 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Tom Ford</h3>
                             <p class="team-member__profession">Frontend Developer</p>
+                            <ul class="social-networks-list">
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -138,6 +198,36 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Camila Garcia</h3>
                             <p class="team-member__profession">Marketing</p>
+                            <ul class="social-networks-list">
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -146,6 +236,36 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Daniel Wilson</h3>
                             <p class="team-member__profession">UI Designer</p>
+                            <ul class="social-networks-list">
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-networks-list__item">
+                                    <a class="social-networks-list__link" href="">
+                                        <svg class="social-networks-list__icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
