Add details text for each item in portfolio section

--- a/index.html
+++ b/index.html
@@ -277,48 +277,78 @@
                 <h2 class="portfolio__title">Our Portfolio</h2>
                 <ul class="portfolio__list">
                     <li class="portfolio-item">
-                        <img class="portfolio-item__photo" src="./images/portfolio/case-1.jpg" alt="Banking App"
-                            width="360" />
+                        <div class="portfolio-item__photo">
+                            <img src="./images/portfolio/case-1.jpg" alt="Banking App" width="360" />
+                            <p class="portfolio-item__details">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item__info">
                             <h3 class="portfolio-item__title">Banking App</h3>
                             <p class="portfolio-item__text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item__photo" src="./images/portfolio/case-2.jpg" alt="Cashless Payment"
-                            width="360" />
+                        <div class="portfolio-item__photo">
+                            <img src="./images/portfolio/case-2.jpg" alt="Cashless Payment" width="360" />
+                            <p class="portfolio-item__details">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item__info">
                             <h3 class="portfolio-item__title">Cashless Payment</h3>
                             <p class="portfolio-item__text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item__photo" src="./images/portfolio/case-3.jpg" alt="Meditation App"
-                            width="360" />
+                        <div class="portfolio-item__photo">
+                            <img src="./images/portfolio/case-3.jpg" alt="Meditation App" width="360" />
+                            <p class="portfolio-item__details">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item__info">
                             <h3 class="portfolio-item__title">Meditation App</h3>
                             <p class="portfolio-item__text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item__photo" src="./images/portfolio/case-4.jpg" alt="Taxi Service"
-                            width="360" />
+                        <div class="portfolio-item__photo">
+                            <img src="./images/portfolio/case-4.jpg" alt="Taxi Service" width="360" />
+                            <p class="portfolio-item__details">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item__info">
                             <h3 class="portfolio-item__title">Taxi Service</h3>
                             <p class="portfolio-item__text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item__photo" src="./images/portfolio/case-5.jpg"
-                            alt="Screen Illustrations" width="360" />
+                        <div class="portfolio-item__photo">
+                            <img src="./images/portfolio/case-5.jpg" alt="Screen Illustrations" width="360" />
+                            <p class="portfolio-item__details">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item__info">
                             <h3 class="portfolio-item__title">Screen Illustrations</h3>
                             <p class="portfolio-item__text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img class="portfolio-item__photo" src="./images/portfolio/case-6.jpg" alt="Online Courses"
-                            width="360" />
+                        <div class="portfolio-item__photo">
+                            <img src="./images/portfolio/case-6.jpg" alt="Online Courses" width="360" />
+                            <p class="portfolio-item__details">
+                                14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+                                App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
+                        </div>
                         <div class="portfolio-item__info">
                             <h3 class="portfolio-item__title">Online Courses</h3>
                             <p class="portfolio-item__text">Marketing</p>
