--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Mark Guerrero</h3>
                             <p class="team-member__profession">Product Designer</p>
-                            <ul class="social-networks-list">
+                            <ul class="social-networks-list gap-24">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
@@ -160,7 +160,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Tom Ford</h3>
                             <p class="team-member__profession">Frontend Developer</p>
-                            <ul class="social-networks-list">
+                            <ul class="social-networks-list gap-24">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
@@ -198,7 +198,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Camila Garcia</h3>
                             <p class="team-member__profession">Marketing</p>
-                            <ul class="social-networks-list">
+                            <ul class="social-networks-list gap-24">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
@@ -236,7 +236,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Daniel Wilson</h3>
                             <p class="team-member__profession">UI Designer</p>
-                            <ul class="social-networks-list">
+                            <ul class="social-networks-list gap-24">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
@@ -360,12 +360,47 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo footer__logo">Web <span class="accent-light">Studio</span></a>
-            <p class="footer__text">
-                Increase the flow of customers and sales for your business with digital
-                marketing & growth solutions.
-            </p>
+        <div class="container flex ai-b">
+            <div class="footer__column">
+                <a href="./index.html" class="logo footer__logo">Web <span class="accent-light">Studio</span></a>
+                <p class="footer__text">
+                    Increase the flow of customers and sales for your business with digital
+                    marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer__column">
+                <p class="footer__title">Social media</p>
+                <ul class="social-networks-list gap-16">
+                    <li class="social-networks-list__item">
+                        <a class="social-networks-list__link" href="">
+                            <svg class="social-networks-list__icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-networks-list__item">
+                        <a class="social-networks-list__link" href="">
+                            <svg class="social-networks-list__icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-networks-list__item">
+                        <a class="social-networks-list__link" href="">
+                            <svg class="social-networks-list__icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-networks-list__item">
+                        <a class="social-networks-list__link" href="">
+                            <svg class="social-networks-list__icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
