--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Mark Guerrero</h3>
                             <p class="team-member__profession">Product Designer</p>
-                            <ul class="social-networks-list gap-24">
+                            <ul class="social-networks-list">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
@@ -370,7 +370,7 @@
             </div>
             <div class="footer__column">
                 <p class="footer__title">Social media</p>
-                <ul class="social-networks-list gap-16">
+                <ul class="social-networks-list">
                     <li class="social-networks-list__item">
                         <a class="social-networks-list__link" href="">
                             <svg class="social-networks-list__icon" width="24" height="24">
