--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Tom Ford</h3>
                             <p class="team-member__profession">Frontend Developer</p>
-                            <ul class="social-networks-list gap-24">
+                            <ul class="social-networks-list">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
@@ -198,7 +198,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Camila Garcia</h3>
                             <p class="team-member__profession">Marketing</p>
-                            <ul class="social-networks-list gap-24">
+                            <ul class="social-networks-list">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
@@ -236,7 +236,7 @@
                         <div class="team-member__info">
                             <h3 class="team-member__name">Daniel Wilson</h3>
                             <p class="team-member__profession">UI Designer</p>
-                            <ul class="social-networks-list gap-24">
+                            <ul class="social-networks-list">
                                 <li class="social-networks-list__item">
                                     <a class="social-networks-list__link" href="">
                                         <svg class="social-networks-list__icon" width="16" height="16">
